--- a/index.html
+++ b/index.html
@@ -24,20 +24,20 @@
                     <button data-remodal-action="confirm" class="remodal-confirm">确定</button>
                 </div>
                 <h1 id="username" >ekCit</h1>
-                <h4 id="persona-tag" >Python / Web / 互联网教育</h4>
+                <h4 id="persona-tag" >javascript / Web前端 / 互联网教育</h4>
             </div>
             <div class="profile info-unit">
                 <h2 class="info-header"><i class="iconfont icon-person"></i> <span class="info-title">基本信息</span></h2>
                 <hr>
                 <ul class="info-list">
                     <li>
-                        <label class="left-label">姓名</label><span class="label-value">XXX</span></li>
+                        <label class="left-label">姓名</label><span class="label-value">胡晓翔</span></li>
                     <li>
                         <label class="left-label">学历</label><span class="label-value">本科</span></li>
                     <li>
-                        <label class="left-label">毕业院校</label><span class="label-value">北京邮电大学</span></li>
+                        <label class="left-label">毕业院校</label><span class="label-value">安徽大学</span></li>
                     <li>
-                        <label class="left-label">毕业年份</label><span class="label-value">2017</span></li>
+                        <label class="left-label">毕业年份</label><span class="label-value">2015</span></li>
                 </ul>
             </div>
             <div class="contact info-unit">
@@ -45,9 +45,9 @@
                 <hr>
                 <ul class="info-list">
                     <li>
-                        <label class="left-label">手机</label><span class="label-value">182XXXXXXXX</span></li>
+                        <label class="left-label">手机</label><span class="label-value">15600891122</span></li>
                     <li>
-                        <label class="left-label">邮箱</label><span class="label-value">crmrc2014@gmail.com</span></li>
+                        <label class="left-label">邮箱</label><span class="label-value">1586445437@qq.com</span></li>
                     <li>
                         <label class="left-label">个人主页</label><span class="label-value">exit-tixe.me</span></li>
                     <li>
@@ -81,14 +81,12 @@
                 <hr>
                 <ul class="stack-list">
                     <li>
-                        <label class="left-label">前端</label><span class="label-value">jQuery、Angular.js、React.js</span></li>
+                        <label class="left-label">前端</label><span class="label-value">html5、javascript、jQuery、git</span></li>
                     </li>
                     <li>
                         <label class="left-label">后端</label><span class="label-value">Flask、Django、Twisted、Node.js、MongoDB、MySQL、Redis</span></li>
                     </li>
-                    <li>
-                        <label class="left-label">其它</label><span class="label-value">我全都是瞎写的。</span></li>
-                    </li>
+                    
                 </ul>
             </div>
 
@@ -113,10 +111,7 @@
                 <hr>
                 <ul class="experience-list">
                     <li>
-                        <h3>北京邮电大学 - 网络工程专业（本科）2012-2017</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                        </p>
+                        <h3>安徽大学 - 信息显示与光电技术（本科）2011-2015</h3>
                     </li>
                 </ul>
             </div>
@@ -125,13 +120,14 @@
                 <hr>
                 <ul class="experience-list">
                     <li>
-                        <h3>北京创客空间－实习生（实习）</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        <h3>北京步鼎方舟科技有限公司－实习生（实习:2016.03 — 2016.06）</h3>
+                        <p>
+                        负责前端代码的编写和后端的维护。主要成果加油员系统和官网的主要代码编写，此系统为公司主营业务“加油”的直接使用者加油员的管理系统。该系统使用SUI+Zepto写成，微车官网主要涉及了jQuery和css3，比较简洁直观，还有一些主要的内容在活动页面上。 
                         </p>
                     </li>
                     <li>
-                        <h3>实验楼－课程内容（实习）</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        <h3>安徽表现网络科技有限公司(web前端:2015.06 — 2016.02)</h3>
+                        <p>1.负责使用DIV+CSS实现对网页的排版； 2.调整、整合以及代码、页面性能的优化，提高用户的体验； 3.解决各主流浏览器的兼容问题； 4.和后端合作对接，完成整个产品的开发； 5.使用Bootstrap框架实现网站响应式，并运用CSS3、JS、Jquery实现网页特效。 6.熟练使用JQuery，bootstrap常用框架,了解angular.js框架。
                         </p>
                     </li>
                 </ul class="experience-list">
@@ -141,22 +137,22 @@
                 <hr>
                 <ul class="experience-list">
                     <li>
-                        <h3>基于 Qt 5 的文本编辑器</h3>
+                        <h3>加油员系统</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam。Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            此系统为公司主营业务“加油”的直接使用者加油员的管理系统。 加油员推荐用户使用“微车”加油，小票机出票后的订单即可在该系统验单，获得任务奖励。 另外迭代过程中融合了站长、供应链、多任务奖励等功能。 该系统使用SUI+Zepto写成。
                             <br/>
                         </p>
                     </li>
                     <li>
-                        <h3>基于 Flask 的主机监视系统</h3>
+                        <h3>微车官网</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            微车官网主要涉及了jQuery和css3，比较简洁直观，还有一些主要的内容在活动页面上。
                         </p>
                     </li>
                     <li>
-                        <h3>基于 Live2D 与 clmtrackr 的山寨 Facerig</h3>
+                        <h3>天然婚纱摄影</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            本项目通过给天然婚纱摄影公司做产品展示以及对各项服务的介绍来吸引顾客，用到了Bootstrap、css、JS、Jquery等技术开发， 因为本项目用到了H5和CSS3所以用到了css hack用于兼容IE9以下版本。
                         </p>
                     </li>
                     <li>
@@ -172,10 +168,7 @@
                 <hr>
                 <ul class="experience-list">
                     <li>
-                        <h3>小学生作文二等奖</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam。
-                        </p>
+                        <h3>四级证书</h3>
                     </li> 
                     <li>
                         <h3>曾获统一冰红茶“再来一瓶”奖</h3>
@@ -183,18 +176,13 @@
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam。
                         </p>
                     </li> 
-                    <li>
-                        <h3>这一行也是为了凑版面</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam。
-                        </p>
-                    </li>                     
+                                    
             </div>
             <div class="aboutme info-unit right-paragraph">
                 <h2 class="info-header"><i class="iconfont icon-flower"></i> <span class="info-title">自我评价</span></h2>
                 <hr>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    对web前端，编程，数码，系统这类互联网相关的知识来源于自己的兴趣爱好，最开始是通过w3c，实验楼，慕课网和极客学院这类网络授课网站接触到前端领域，有快速学习互联网新知识的能力和热情。
                 </p>
             </div>
         </div>
