--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 <h2 class="info-header"><i class="iconfont icon-flower"></i> <span class="info-title">自我评价</span></h2>
                 <hr>
                 <p>
-                    热爱编程，熟练掌握h5、css3、js、jquery，了解bootstrap、Angularjs框架，能够熟练操作git，linux。vim等工具，有1年多的前端开发经验，能快速发现并解决问题，有良好的编码习惯。有良好的编程思维体系以及阶段总结习惯。希望在3年后成为独立的全栈工程师。
+                    热爱编程，熟练掌握h5、css3、js、jquery，了解bootstrap、Angularjs框架，能够熟练操作git，linux。vim等工具，有1年多的前端开发经验，能快速发现并解决问题，有良好的编码习惯。有良好的编程思维体系以及阶段总结习惯，希望在3年后成为独立的全栈工程师。
                 </p>
             </div>
         </div>
